Mejoras en el portafolio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,46 @@ html{
   margin-right: 50px;
 }
 
+body{
+  font-family: var(--font-outfit);
+}
+
+#inicio{
+  scroll-margin-top: 200px;
+}
+
 @theme {
   --color-light-blue: #8296BD;
+}
+
+@layer utilities {
+  .slide-in {
+    animation: slideIn 0.5s forwards;
+  }
+  
+  .slide-out {
+    animation: slideOut 0.5s forwards;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideOut {
+    from {
+      transform: translateX(0);
+      opacity: 1;
+    }
+    to {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+  }
 }
